fix: fix multi section block spacing (#71)
* adjust shape opacity

--- a/src/styles/section.module.scss
+++ b/src/styles/section.module.scss
@@ -1,5 +1,11 @@
 .section {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: rem(48);
+    @include tablet {
+        gap: rem(88);
+    }
     &__hero {
         &:before {
             background-position-y: 0 !important;
